Styling/styles/styles.css
@import url('https://fonts.googleapis.com/css2?family=Cardo&family=Oxygen+Mono&family=Oxygen:wght@300;400;700&display=swap');
@import url('./flaticon.css');

@tailwind base;
@tailwind components;
@tailwind utilities;

._button_normal {
  @apply  text-gray-800 bg-bellow-500 p-2 rounded-lg no-underline;
  &:hover {
    @apply ring-4;
  }
}

._button {
  @apply  font-bold _button_normal;
}

body main a, header a {
  @apply font-bold;
  &:hover {
    @apply underline;
  }
}

body > main a{
  @apply underline;
  &:hover {  
    @apply bg-bellow-300;
  
}
}
body > footer a {
  &:hover {
    @apply text-bellow-500;
  }
}

body > header {
  @apply p-2 xl:container mx-auto;
}

body > header > nav {
  @apply flex items-center duration-1000 z-50;
  top: -100%;
  transition-property: top;
}

body > header > nav > ol{
  @apply flex;
}

body > header > nav > ol > li {
  @apply flex;
}

body > header > nav > ol > li > a{
  @apply p-2 m-2;
}

body > header > nav > ol.logo {
  @apply flex-shrink-0;
}

body > header > nav > ol.logo img{
  @apply h-10 mr-8;
}
body.more-active {
  &.end-active > header > nav {
    top: calc(-125%);
  }
  & > main {
    @apply relative z-0;
  }
  & > header > nav {
    @apply bg-white w-screen absolute top-0 left-0 right-0 p-2 flex flex-col items-stretch bg-opacity-90 z-50 duration-1000;
    transition-property: top;
    @apply shadow-lg;
    & > ol.more {
      #menu {
        @apply absolute h-auto w-6 right-2;
        img {
          @apply h-auto w-full;
        }
      }
    }
    & > ol.menu, & > ol.menu ~ ol.menu {
      @apply contents;
      & > li > a {
        @apply flex flex-col text-xl w-full py-2 my-2 sm:text-4xl sm:py-4 sm:my-4;
      }
    }
    .logo {
      @apply mr-12 w-full;
      img {
        @apply w-full h-auto;
      }
    }  
  }
} 
body > header > nav > ol.more {
  @apply flex lg:hidden justify-end flex-grow;
  #menu {
    @apply z-50 top-8 mr-4;
    img {
      @apply h-6;
    }
  }
}
body > header > nav > ol.menu {  
  @apply hidden md:flex ;
}
body > header > nav > ol.menu ~ ol.menu{  
  @apply hidden lg:flex flex-grow justify-end;
}

body > main {
  @apply xl:container mx-auto;
  & > header {
    @apply lg:flex mx-6;
   & > main {
     @apply  lg:w-1/2 flex-none xl:items-stretch;
     & > header {
       @apply w-1/2 flex sm:w-full  self-start md:py-4;
       
       & > h1 {
         @apply text-5xl md:text-6xl xl:text-8xl xl:w-full font-black leading-normal md:leading-snug tracking-tight flex sm:w-1/2;
       }
     } 
     & > .hero  {
       @apply flex flex-col sm:flex-row xl:text-lg 2xl:text-xl mb-12  lg:flex-col lg:max-w-screen-md items-stretch;
       & > header {
         @apply my-4 sm:w-3/4 sm:my-0 flex sm:mr-4 lg:w-full;
         img{
           @apply object-cover rounded-lg;
         }
       }
       & > main {
         @apply flex flex-col items-center sm:text-lg md:text-xl  md:justify-between lg:my-4;
         
       
         & > footer {
           @apply flex w-full mt-4;
           & > a {
             @apply _button w-full text-center;
           }
         }
       }
       .text{
         @apply my-4 sm:my-0 flex flex-col justify-between font-thin;
       }
     }
   }
   & > footer {
     @apply hidden lg:flex flex-grow flex-1 flex-shrink m-4;
     video {
       @apply flex object-cover w-full;
     }
   }
  }
}




body > main h2 {
  @apply font-black text-xl;
}

body > main .services {
  @apply m-6 border-t-2 py-6;
}

body > main .services > header {
  @apply mx-auto flex flex-col text-center;
}

body > main .services img {
  @apply w-20 mx-auto my-3;
}

body > main .services ol {
  @apply md:grid md:grid-cols-3 md:gap-x-8;
}

body > main .services li {
  @apply my-4 py-4 md:border-t-0 md:mt-6;
}

body > main .services h3 {
  @apply text-lg text-center font-light;
}


body > main #testimonials  {
  @apply m-6 border-t-2 py-6;
}

body > main #testimonials > header {
  @apply mx-auto flex flex-col text-center pb-2 md:py-4;
}

body > main #testimonials > ol {
  @apply text-center py-2 md:grid md:grid-cols-3 md:gap-x-8;
}

body > main #testimonials > ol > li {
  @apply py-4 border-t-2 border-gray-400 border-opacity-10 md:border-0;

  & > figure {
    @apply md:text-left md:text-sm;
    & > blockquote {
      @apply md:py-2;
    }
    & > figcaption {
      @apply md:font-bold;
    }
  }
}

body > main #contact-us {
  @apply bg-black text-white py-4 text-lg md:container md:mx-auto md:max-w-screen-md md:rounded-lg;
}

body > main #contact-us > main {
  @apply m-8 flex flex-col;
}

body > main #contact-us > main > a {
  @apply bg-white text-black rounded-md p-4 font-bold flex ml-auto;
}

body > main #posts { 
  @apply m-6;
}

body > main #posts > ol{
  @apply md:grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 md:gap-8 md:justify-items-stretch;
}

body > main #posts > ol > li{
  @apply my-2 py-4 border-b-2 border-gray-400 border-opacity-10 md:border-0 md:flex md:flex-col;
}

body > main #posts > ol > li:last-child {
  @apply border-b-0;
}

body > main #posts > ol > li > header {
  @apply w-full mb-2;
}

body > main #posts > ol > li > header h3{
  @apply text-xl py-1;
}

body > main #posts > ol > li > header > ol {
  @apply flex space-x-1;
}

body > main #posts > ol > li > header > ol > li {
  @apply flex text-sm;
}

body > main #posts > ol > li > header img{
  @apply object-cover w-full h-40 md:rounded-lg;
}

body > main #posts > ol > li > main {
  @apply my-1;
}

body > main #posts > ol > li > footer {
  @apply flex-1 flex-grow flex flex-col justify-end;
}

body > main #posts > ol > li > footer > a {
  @apply text-sm flex font-light justify-between py-1;
}

body > main > .newsletter-cta {
  @apply flex-col m-6 p-8 bg-black text-white rounded-lg;
  h2 {
    @apply text-3xl;
  }
  & > header {
    @apply mb-4 flex;
  }
  & > footer {
    @apply mt-4 flex w-full; 
    a {
      @apply _button w-full text-center;
    }
  }
  
}
/* ... */

